update(methods & architecture): implemented HTTP methods & clean architecture

--- a/KFU.KazanBook.API/web.config
+++ b/KFU.KazanBook.API/web.config
@@ -4,7 +4,7 @@
     <defaultDocument>
       <files>
         <clear />
-        <add value="Book/" />
+        <add value="Books/" />
       </files>
     </defaultDocument>
   </system.webServer>
