--- a/KFU.KazanBook.API/KFU.KazanBook.API.csproj
+++ b/KFU.KazanBook.API/KFU.KazanBook.API.csproj
@@ -5,7 +5,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNet.WebApi.Core" Version="5.2.7" />
     <PackageReference Include="Npgsql" Version="5.0.10" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\KFU.KazanBook.BAL\KFU.KazanBook.BAL.csproj" />
+    <ProjectReference Include="..\KFU.KazanBook.DAL\KFU.KazanBook.DAL.csproj" />
   </ItemGroup>
 
 
