--- a/KFU.KazanBook.BAL/KFU.KazanBook.BAL.csproj
+++ b/KFU.KazanBook.BAL/KFU.KazanBook.BAL.csproj
@@ -1,8 +1,17 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNet.WebApi.Core" Version="5.2.7" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.2.0" />
+    <PackageReference Include="Npgsql" Version="5.0.10" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\KFU.KazanBook.DAL\KFU.KazanBook.DAL.csproj" />
+  </ItemGroup>
 
 </Project>
